Fixed attribute punctuation style

--- a/styles/base.less
+++ b/styles/base.less
@@ -241,7 +241,8 @@ atom-text-editor .search-results .marker.current-result .region,
 	&.other.attribute-name {
 		color: @base09;
 
-		&.id {
+		&.id,
+		.punctuation {
 			color: @base0D;
 		}
 	}
