Changed gutter background color
Fixes #2

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -33,5 +33,5 @@
 //------------------------------------------------------------------------------
 @syntax-gutter-text-color:                  @base04;
 @syntax-gutter-text-color-selected:         @syntax-gutter-text-color;
-@syntax-gutter-background-color:            darken(@base00, 2);
+@syntax-gutter-background-color:            @base00;
 @syntax-gutter-background-color-selected:   @base01;
